# clion-sqlite

./: .gitignore  CMakeLists.txt  lua.c  lua.h  main.c  openmp.c  sqlite.c  sqlite.h  string_utilities.c  string_utilities.h
src/: CLionSQLite.go
src/CLionSQLite/: CMakeLists.txt  library.c  library.h
src/CLionSQLite-Cmd/: CMakeLists.txt  lua.c  lua.h  main.c  openmp.h  sqlite.c  sqlite.h
src/ConsoleApp1/: ConsoleApp1.sln
src/ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
src/ConsoleApp1/ConsoleApp1/Properties/: AssemblyInfo.cs
src/clionsqlite-cmd/: CMakeLists.txt  lua.c  openmp.h  sqlite.h
